# tversky

./: .gitignore  CITATION.cff  Makefile  README.md  copyright.txt  pyproject.toml
.github/workflows/: pypi.yml  tests.yml
scripts/: add_copyright.py  profile_speed.py
src/: .gitignore  LICENSE.txt
src/tversky/: __about__.py  __init__.py  differentiable_tversky.py  differentiable_tversky_v2.py  nn.py
tests/: __init__.py  test_mnist.py  test_tversky_lib.py  test_v2_equivalence.py
tests/outputs/mnist/: report.md
